syntax = "proto3";
package matcha;

option go_package = "proto";
option objc_class_prefix = "MatchaPB";
option java_package = "com.github.gomatcha.matcha.proto";
option java_outer_classname = "Proto";

message Image {
    int64 width = 1;
    int64 height = 2;
    int64 stride = 4;
    bytes data = 3;
}

message ImageProperties {
    int64 width = 1;
    int64 height = 2;
    double scale = 3;
}

message ImageOrResource {
    Image image = 1;
    string path = 2;
}

message Color {
    uint32 red = 1;
    uint32 blue = 2;
    uint32 green = 3;
    uint32 alpha = 4;
}
